--- a/sections/data.tex
+++ b/sections/data.tex
@@ -15,9 +15,12 @@ We study the correlation between target density field and potential sources of s
 
 \begin{figure}
     \includegraphics[width=0.45\textwidth]{figures/pcc.pdf} 
-    \caption{Spearman correlation coefficient between galaxy density and imaging properties.}
+    \includegraphics[width=0.45\textwidth]{figures/pccx.pdf}     
+    \caption{Top: Spearman correlation coefficient between galaxy density and imaging properties. Solid curves represent the range of correlations observed in the mocks. Bottom: Pearson correlation coefficient between imaging properties.}
     \label{fig:pcc}
 \end{figure}
+
+
 
 Fig. \ref{fig:nz} shows the redshift distribution of LRGs and the halo bias as a function of redshift. 
 
