--- a/sections/data.tex
+++ b/sections/data.tex
@@ -13,6 +13,17 @@ We study the correlation between target density field and potential sources of s
     \label{fig:ng}
 \end{figure*}
 
+
+\begin{figure}
+    \centering
+    \includegraphics[width=0.45\textwidth]{figures/npred.pdf}
+    \caption{Predicted galaxy counts from template regression. Baseline approach uses imaging maps from Zhou et al. (2022): EBV, galaxy depth in rgz, psfdepth in W1, and psfsize in grz. Conservative I uses EBV and galaxy depth in z, and Conservative II uses EBV, galaxy depth in z, and psfsize in r. In all approaches, the models are regressed on BASS+MzLS, DECaLS North, and DECaLS South separately.}
+    \label{fig:npred}
+\end{figure}
+
+
+
+
 \begin{figure}
     \includegraphics[width=0.45\textwidth]{figures/pcc.pdf} 
     \includegraphics[width=0.45\textwidth]{figures/pccx.pdf}     
